--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">dustAlarm</string>
+    <string name="channel_name">forgottenMask?</string>
+    <string name="channel_description">mask</string>
 </resources>
